<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StoryAppFinal</string>
    <string name="title_logo">StoryAppFinal</string>

    <string name="HeadlineLogin">Hey There !</string>
    <string name="CaptionLogin">It’s time to make ur journey! Let’s get started now.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="suggestion2register">Don’t Have an Account?</string>
    <string name="register_now">Register Now!</string>
    <string name="register">Register</string>
    <string name="registerCaption">Create your account and start your journey with us</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="submit">Submit</string>

    <string name="email_empty">Email Must Be Filled</string>
    <string name="password_empty">Password Must Be Filled</string>
    <string name="password_confirmation_empty">Password Confirmation Must Be Filled</string>
    <string name="email_n_password_empty">Email and Password Must Be Filled</string>
    <string name="full_name_empty">Full Name Must Be Filled</string>
    <string name="email_invalid">Format Email is Invalid</string>
    <string name="password_minimum_character">Password Must Be at Least 8 Characters</string>
    <string name="password_not_match">Password entered is not the same</string>
    <string name="account_already_registered">Your account is created and ready to use. Login and see what other people is up to!</string>

    <string name="full_name">Full Name</string>
    <string name="greeting">Hi %1$s,</string>
    <string name="add_stories">addStories</string>
    <string name="photo_profiles">photoProfiles</string>
    <string name="username_account">User</string>
    <string name="image_preview">Image Preview</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="share">Share</string>
    <string name="upload">Upload</string>
    <string name="greetings">Welcome to StoryApp,</string>
    <string name="logout">Logout</string>
    <string name="gallery">Gallery</string>
    <string name="submit_as_guest">Submit as Guest</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="logo_story_app">Logo StoryApp</string>
    <string name="abstract_1">Abstract 1</string>
    <string name="profile_button">Profile Button</string>

    <string name="no_permission">No Permission</string>
    <string name="not_empty">Image and description field must not be empty</string>
    <string name="choose_image">Choose a Picture</string>
    <string name="taking_picture">Taking picture…</string>
    <string name="failed_taking_pic">Failed to taking picture…</string>
    <string name="success_taking_pic">Successfully take a picture…</string>
    <string name="failed_open_camera">Failed to open camera…</string>
    <string name="failed_uploading_pic">Failed to uploading…</string>
    <string name="text_to_share">Share via…</string>
    <string name="example_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras fermentum mi non facilisis cursus. Maecenas rhoncus ultrices imperdiet. Donec eget felis eros. Aenean lacus nisi, tincidunt quis lectus nec, malesuada dapibus ligula. Ut enim lacus, pharetra luctus placerat et, cursus sed arcu. Curabitur sodales vitae purus eget porta</string>
    <string name="location">Location</string>
    <string name="no_location">No location</string>
    <string name="upload_success">Upload Success</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="must_filled">Must be filled</string>

    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="map_type">Map Type</string>
    <string name="style_maps">Style Maps</string>
    <string name="normal">Normal</string>
    <string name="sattelite">Sattelite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="retry">Retry</string>
    <string name="mark_your_location">Mark your location</string>
</resources>