<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="68dp"
            android:background="@drawable/container_rounded1"
            android:elevation="12dp"
            android:outlineAmbientShadowColor="@color/shadowColor"
            android:outlineSpotShadowColor="@color/shadowColor"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="p">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/logo1" />
        </FrameLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/HeadlineLogin"
            android:textColor="#535454"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="@+id/frameLayout"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/CaptionLogin"
            android:textColor="#A9A9A9"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:layout_marginEnd="-100dp"
            android:src="@drawable/abtract1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.devcode.storyapp.ui.customView.CustomEditText
            android:id="@+id/txt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="52dp"
            android:drawableStart="@drawable/ic_message"
            android:drawablePadding="8dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="18dp"
            android:textColor="@color/textColorCaption"
            android:textColorHint="@color/textColorCaption2"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.devcode.storyapp.ui.customView.CustomEditText
            android:id="@+id/txt_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingHorizontal="18dp"
            android:textColor="@color/textColorCaption"
            android:textColorHint="@color/textColorCaption2"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_email" />

        <com.devcode.storyapp.ui.customView.CustomButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/style_buttonlogin"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/btn_login"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/txt_pass"
            app:layout_constraintStart_toStartOf="@+id/txt_pass"
            app:layout_constraintTop_toBottomOf="@+id/txt_pass" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button">
            <TextView
                android:id="@+id/txt_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_regular"
                android:text="@string/suggestion2register"/>
            <TextView
                android:id="@+id/txt_registernow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/register_now"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>