<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailStories.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="720dp"
            android:paddingHorizontal="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_detail_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="240dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_image_24" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/gilroy_extrabold"
                android:text="@string/username_account"
                android:textAlignment="center"
                android:textSize="26sp"
                app:layout_constraintTop_toBottomOf="@+id/card_view"
                tools:layout_editor_absoluteX="16dp" />

            <com.devcode.storyapp.ui.customView.CustomEditText
                android:id="@+id/v_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:autofillHints=""
                android:gravity="top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:minHeight="150dp"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
                tools:layout_editor_absoluteX="16dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:background="@drawable/style_button"
                android:text="@string/share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>